<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparentBackground"
    android:orientation="vertical"
    tools:context="cn.bingoogolapple.qrcode.zxingdemo.SuccessScanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <!--title-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/success_title"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/success_scan_notice"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="@drawable/white_cross"
                android:onClick="onClick_close" />

        </RelativeLayout>

        <!--info-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/light_type"
                    android:textColor="@android:color/black"
                    android:textSize="16dp" />

                <Spinner
                    android:id="@+id/light_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@android:color/black"
                    android:textSize="16dp"></Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/light_uid"
                    android:textColor="@android:color/black"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/uid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:maxLines="1"
                    android:text="@string/light_uid_edit"
                    android:textColor="@android:color/black"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/light_head"
                    android:textColor="@android:color/black"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/light_head"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:maxLines="1"
                    android:text="@string/light_head_edit"
                    android:textColor="@android:color/black"
                    android:textSize="16dp" />

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:src="@drawable/gray_line" />

        <!--Location-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lat_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/lat"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/lng_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/lng"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/address_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/address"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

        </LinearLayout>


        <!--bottom butons-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/correct_location"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/pin_btn"
                android:onClick="onClick_adjustLocation"
                android:text="@string/adjust_btn"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/next_step"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tick_btn"
                android:onClick="onClick_nextStep"
                android:text="@string/next_btn"
                android:textColor="@android:color/white"
                android:textSize="18dp"/>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
