<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparentBackground"
    android:orientation="vertical"
    tools:context="cn.bingoogolapple.qrcode.zxingdemo.AdjustLocationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="360dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <!--title-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/success_title"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_centerHorizontal="true"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="@string/adjust_location"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/success_title"
                android:layout_toStartOf="@id/success_title"
                android:background="@drawable/icon_locate"
                android:scaleType="centerInside" />

        </RelativeLayout>

        <!--location info-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/lat"
                    android:textColor="@android:color/black"
                    android:textSize="16dp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/lng"
                    android:textColor="@android:color/black"
                    android:textSize="16dp" />
            </RelativeLayout>
        </LinearLayout>

        <!--button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/correct_location"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/close_btn"
                android:onClick="onClick_adjustLocation"
                android:text="@string/cancel_locate_btn"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/next_step"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tick_btn"
                android:onClick="onClick_nextStep"
                android:text="@string/confirm_locate_btn"
                android:textColor="@android:color/white"
                android:textSize="18dp"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
