<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical"
    tools:context="cn.bingoogolapple.qrcode.zxingdemo.PhotoActivity">

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="vertical">


        <!--title-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/take_photo_title"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_centerHorizontal="true"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="@string/take_photo_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/take_photo_title"
                android:layout_toStartOf="@id/take_photo_title"
                android:background="@drawable/icon_locate"
                android:scaleType="centerInside" />

        </RelativeLayout>

        <!--button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/correct_location"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/back_btn"
                android:onClick="onClick_back"
                android:text="@string/back_btn"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/next_step"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tick_btn"
                android:onClick="onClick_take"
                android:text="@string/confirm_takephoto_btn"
                android:textColor="@android:color/white"
                android:textSize="18dp"/>
        </LinearLayout>

    </LinearLayout>

    <cn.bingoogolapple.qrcode.zxingdemo.CameraSurfaceView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/bottom"
        android:layout_toLeftOf="@id/bottom"
        android:id="@+id/preview"/>

</RelativeLayout>
